--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
     height: 100vh;
     width: 100vw;
     max-width: 1000px;
-
 }
+
+/* ---HEADER---  */
 
 .header {
     display: grid;
@@ -40,8 +41,6 @@
     width: 314px;
     margin-bottom: 1rem;
     margin-left: 5rem;
-    
-
 }
 
 .header__blue-box p {
@@ -52,7 +51,6 @@
     width: 268px;
     margin-bottom: 3rem;
     margin-left: 5rem;
-
 }
 
 .header__blue-box span {
@@ -61,13 +59,13 @@
 
 .button {
     font-family: "Fira sans";
+    font-size: 10px;
     padding: 0.5rem 1rem; 
     background-color: white;
     border-radius: 100px;
     border: none;
     width: 131px;
     margin-left: 5rem;
-
 }
 
 .header__orange-box {
@@ -95,7 +93,6 @@
     font-weight: 900;
 }
 
-
 .header__yellow-box {
     height: 272px;
     background-color: rgba(255, 185, 57, 1);
@@ -121,15 +118,51 @@
     font-weight: 900;
 }
 
-.header__nav nav ul a li {
+/* ---HEADER NAV---  */
+
+nav ul a li {
     font-family: "Fira sans";
     font-size: 12px;
     font-weight: 600;
-    color: rgba(0, 0, 0, 1);
+    color:#8D8D8D;
     list-style-type: none;
-
+    margin: 1rem;
 }
 
-.header__nav {
+nav {
+    grid-column: 1 / span 6;
+}
+
+nav ul {
+   display: grid;
+   grid-template-columns: repeat(6, 1fr);
+   justify-items: center;
+}
+
+nav ul a:first-child {
     grid-column: 2;
 }
+
+nav a:nth-child(2) {
+    grid-column: 3;
+}
+
+nav a:nth-child(3) {
+    grid-column: 4;
+}
+
+nav a:nth-child(4) {
+    grid-column: 5;
+}
+
+a:link {
+text-decoration: none;
+}
+
+.header__nav-home {
+    color: black;
+}
+
+/* ---MAIN--- */
+
+
