--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     height: 100vh;
     width: 100vw;
     max-width: 1000px;
+    margin: auto;
 }
 
 /* ---HEADER---  */
@@ -180,16 +181,22 @@ main section h2 {
     font-weight: 900;
     line-height: 100%;
     font-family: "Frank Ruhl Libre";
-    width: 314px;
     margin-bottom: 3rem;
+}
+
+main .large__gray h2 {
+    width: 314px;
 }
 
 main section p {
     font-size: 14px;
     font-family: "Fira Sans";
-    width: 280px;
     font-weight: 500;
     color: rgba(0, 0, 0, 0.6);
+}
+
+main .large__gray p {
+    width: 280px;
 }
 
 main section .button {
@@ -197,17 +204,42 @@ main section .button {
 }
 
 .large__yellow {
-    background-color: aqua;
+    background-color: #FAB131;
+    text-align: center;
 }
 
 .cards {
     display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 4rem;
+}
+
+.about {
+    width: 442px;
+    margin: auto;
+}
+
+.about p {
+    padding-bottom: 5rem;
+}
+
+
+.about h2 {
+    margin: 1rem;
 }
 
 .card div {
     width: 236px;
     height: 150px;
     background-color: blue;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: -2rem;
+    border-radius: 4px;
+    margin-bottom: 2rem;
+    font-family: "Fira Sans";
 }
 
 .card {
@@ -215,9 +247,103 @@ main section .button {
     border-radius: 5px;
     width: 256px;
     height: 308px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -9rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card p {
+    font-size: 11px;
+    line-height: 18px;
+    font-weight: 700;
+    padding: 30px;
 }
 
 .card img {
     width: 50%;
-    overflow-y: hidden;
+}
+
+.card:nth-child(1) div {
+    background-color: #C7DDEA;
+}
+
+.card:nth-child(2) div {
+    background-color: #FAB131;
+}
+
+.card:nth-child(3) div {
+    background-color: #F17949;
+}
+
+.boxes {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: 340px;
+}
+
+.box {
+    grid-column: span 2;
+
+}
+
+.box h3 {
+    color: rgba(0, 0, 0, 0.4);
+    margin: 1rem;
+    font-size: 35px;
+    letter-spacing: -0.02em;
+}
+
+.box h2 {
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 45px;
+    letter-spacing: -0.02em;
+    text-align: center;
+    margin: 7rem 0;
+}
+
+.box p {
+    color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    margin-top: 30%;
+}
+
+.box:nth-child(1) {
+    background-color: #C7DDEA;
+}
+
+.box:nth-child(3) {
+    background-color: #EBEBEB;
+}
+
+.box:nth-child(5) {
+    background-color: #F17949;
+}
+
+footer nav {
+    background-color: #A9A19E;
+    font-family: 'Fira Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 20px;
+    color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer nav a {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+footer div {
+    background-color: #777574;
+    height: 340px;
 }
