--- a/style.css
+++ b/style.css
@@ -62,17 +62,17 @@
 .button {
     font-family: "Fira sans";
     font-size: 10px;
-    padding: 0.5rem 1rem; 
     background-color: white;
     border-radius: 100px;
     border: none;
     width: 131px;
+    height: 39px;
     margin-left: 5rem;
     font-weight: 700;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
 .header__orange-box {
-    
     height: 272px;
     background-color: rgba(241, 121, 73, 1);
     grid-column: 4 / span 3;
@@ -173,7 +173,7 @@ text-decoration: none;
     height: 612px;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
 }
 
 main section h2 {
@@ -188,6 +188,7 @@ main section h2 {
 
 main .large__gray h2 {
     width: 314px;
+    margin-top: 100px;
 }
 
 main section p {
@@ -199,6 +200,7 @@ main section p {
 
 main .large__gray p {
     width: 280px;
+    margin-top: 100px;
 }
 
 main section .button {
@@ -222,7 +224,11 @@ main section .button {
 }
 
 .about p {
-    padding-bottom: 5rem;
+    padding-bottom: 2rem;
+}
+
+.about p:last-child {
+    padding-bottom: 15rem;
 }
 
 
@@ -233,14 +239,13 @@ main section .button {
 .card div {
     width: 236px;
     height: 150px;
-    background-color: blue;
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-top: -2rem;
+    margin-top: -1.5rem;
     border-radius: 4px;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     font-family: "Fira Sans";
 }
 
@@ -265,7 +270,16 @@ main section .button {
 }
 
 .card img {
-    width: 50%;
+    width: 35%;
+    margin-top: 10px
+}
+
+.card:nth-child(1) div img {
+    width: 30%
+}
+
+.card:nth-child(3) div img {
+    width: 50%
 }
 
 .card:nth-child(1) div {
@@ -434,10 +448,40 @@ form .message {
 }
 
 form .button {
-    padding: 1rem 0.5rem;
     align-self: flex-end;
-    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
+.map {
+    background-image: url("grupparbete-examination-main/img/map-contact.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 407px;
+    display: flex;
+}
 
+.map__yellow-box {
+    background-color: #FAB131;
+    width: 323px;
+    height: 206px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    margin-top: 45px;
+    margin-left: 86px;
+}
+
+.map__yellow-box h2 {
+    margin-bottom: 0.5rem;
+}
+.map__yellow-box p {
+    font-family: 'Fira Sans';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.map img {
+    margin: auto; 
+    margin-right: 466px;
+}
 
