--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&family=Frank+Ruhl+Libre:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600;700&family=Frank+Ruhl+Libre:wght@700;900&display=swap');
 
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+html {
+    background-color: #E5E5E5
+} /*Ändrat bakgrund på sidan*/
 
 .wrapper {
     height: 100vh;
@@ -22,6 +26,7 @@
     width: 8.188rem;
     height: 2.438rem;
     font-weight: 700;
+    line-height: 0.75rem; /*Lagt till*/
     box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -31,7 +36,6 @@
 
 
 /* ---HEADER---  */
-
 .header {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -46,10 +50,10 @@
     background-repeat: no-repeat;
     background-size: 50%;
     background-position: bottom 0 right 2%;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    padding-top: 4.438rem;
+    padding-left: 6rem;
+    /*Ändrat från flex till att använda padding för rätt justering, 
+    även tagit bort margin på varje barn och använder padding här istället för vänsterjusteringen*/
 }
 
 .header__blue-box h1 {
@@ -59,25 +63,21 @@
     letter-spacing: -0.02em;
     width: 19.625rem;
     margin-bottom: 1rem;
-    margin-left: 5rem;
+    line-height: 2.813rem; /*Lagt till*/
 }
 
 .header__blue-box p {
     font-family: "Fira sans";
     font-size: 0.875rem;
+    font-weight: 500; /*Lagt till*/
     color: rgba(0, 0, 0, 0.6);
     line-height: 1.5rem;
     width: 16.75rem;
     margin-bottom: 3rem;
-    margin-left: 5rem;
 }
 
 .header__blue-box span {
     color: white;
-}
-
-.header__blue-box .button {
-    margin-left: 5rem;
 }
 
 .header__orange-box, .header__yellow-box {
@@ -94,6 +94,7 @@
     font-family: "Fira sans";
     font-size: 0.688rem;
     font-weight: 700;
+    line-height: 0.813; /*Lagt till*/
     color:rgba(0, 0, 0, 0.5)
 }
 
@@ -102,6 +103,8 @@
     color: white; 
     font-size: 2rem;
     font-weight: 900;
+    line-height: 2.563rem;
+    letter-spacing: -0.02em;
 }
 
 .header__yellow-box {
@@ -110,9 +113,7 @@
 }
 
 
-/* ---HEADER NAV---  */
-
-
+/* Header Nav */
 nav {
     grid-column: 1 / span 6;
 }
@@ -140,7 +141,7 @@ nav a:nth-child(4) {
 }
 
 a:link {
-text-decoration: none;
+    text-decoration: none;
 }
 
 nav ul a li {
@@ -149,22 +150,23 @@ nav ul a li {
     font-weight: 600;
     color:#8D8D8D;
     list-style-type: none;
-    margin: 1rem;
+    line-height: 0.75rem; /*Lagt till*/
+    letter-spacing: -0.02em; /*Lagt till*/
+    margin: 1.5rem; /*Justerat*/
 }
 
 .header__active {
     color: black;
 }
 
+
 /* ---MAIN--- */
-
-
 main section h2 {
     color: white;
     font-size: 2.813rem;
     letter-spacing: -0.02em;
     font-weight: 900;
-    line-height: 100%;
+    line-height: 2.813rem;
     font-family: "Frank Ruhl Libre";
     margin-bottom: 3rem;
 }
@@ -180,9 +182,8 @@ main section .button {
     margin-left: 0;
 }
 
+
 /* Gray section  */
-
-
 .large__gray {
     background-color: #A9A19E;
     height: 38.25rem;
@@ -199,26 +200,25 @@ main .large__gray h2 {
 main .large__gray p {
     width: 17.5rem;
     margin-top: 6.25rem;
+    line-height: 1.5rem; /*Lagt till*/
 }
 
+
 /* Yellow section  */
-
-
 .large__yellow {
     background-color: #FAB131;
     text-align: center;
 }
 
+
 /* Yellow section - Cards  */
-
-
 .cards {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 4rem;
 }
 
-.card {
+.card { /*Justerat storlek på divar, bilder och justerat innehåll med padding/margin*/
     background-color: white;
     border-radius: 5px;
     width: 16rem;
@@ -227,7 +227,7 @@ main .large__gray p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: -9rem;
+    margin-top: -10.5rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -240,7 +240,6 @@ main .large__gray p {
     align-items: flex-start;
     margin-top: -1.5rem;
     border-radius: 4px;
-    margin-bottom: 1.5rem;
     font-family: "Fira Sans";
 }
 
@@ -257,16 +256,17 @@ main .large__gray p {
 }
 
 .card img {
-    width: 35%;
-    margin-top: 10px
+    width: 43%;
+    margin-top: 0.625rem
 }
 
 .card:nth-child(1) div img {
-    width: 30%
+    width: 38%
 }
 
 .card:nth-child(3) div img {
-    width: 50%
+    width: 60%;
+    margin-top: 1rem
 }
 
 .card h4 {
@@ -276,43 +276,44 @@ main .large__gray p {
     font-size: 1rem;
     line-height: 1.25rem;
     color: rgba(0, 0, 0, 0.9);
+    padding-top: 1.438rem;
 }
 
 .card p {
+    font-family: 'Frank Ruhl Libre'; /*La till*/
     font-size: 0.688rem;
     line-height: 1.125rem;
     font-weight: 700;
-    padding: 1.875rem;
+    padding: 0.813rem 1.25rem 1.875rem 1.25rem; 
 }
 
 
 /* Yellow section - About  */
-
 .about {
     width: 27.625rem;
     margin: auto;
 }
 
 .about h2 {
-    margin: 1rem;
+    margin: 2rem;
 }
 
 .about p {
     padding-bottom: 2rem;
+    line-height: 1.25rem;
 }
 
 .about p:last-child {
-    padding-bottom: 15rem;
+    padding-bottom: 10rem; /*^Justerat*/
 }
 
 
 /* Section - Boxes  */
-
-
 .boxes {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: 21.25rem;
+    background-color: #FFFFFF;
 }
 
 .box {
@@ -341,19 +342,24 @@ main .large__gray p {
 
 .box h3 {
     color: rgba(0, 0, 0, 0.4);
-    margin: 1rem;
+    margin: 2rem; /*justerat*/
     font-size: 2.188rem;
     letter-spacing: -0.02em;
+    font-family: 'Frank Ruhl Libre'; /*lagt till*/
+    line-height: 2.188rem;
+    font-weight: 900;
 }
 
 .box p {
     color: rgba(0, 0, 0, 0.7);
     text-align: center;
     margin-top: 30%;
+    font-size: 1.063rem;
+    line-height: 1.25rem;
 }
 
-/* FOOTER */
 
+/* ---FOOTER--- */
 footer nav {
     background-color: #A9A19E;
     font-family: 'Fira Sans';
@@ -369,7 +375,6 @@ footer nav {
 
 footer nav a {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
     margin-bottom: 1rem;
@@ -381,11 +386,10 @@ footer div {
     height: 21.25rem;
 }
 
-/*Contact page */
 
-/* HEADER  */
+/* ------ Contact page ------ */
 
-
+/* ---HEADER--- */
 .header__contact-starter {
     height: 21.25rem;
     background-color: rgba(199, 221, 234, 1);
@@ -405,15 +409,17 @@ footer div {
     font-size: 2.813rem;
     line-height: 2.813rem;
     letter-spacing: -0.02em;
+}
 
+/* Header Nav */
+.nav2 {
+    background-color: #FFFFFF;
 }
 
 /* Gray section  */
-
-
 .large__gray-contact {
     background-color: #A9A19E;
-    height: 38.25rem;
+    height: 34rem;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
 }
@@ -421,13 +427,12 @@ footer div {
 .large__gray-contact h2 {
     grid-column: 1 / span 3;
     margin: auto;
-    margin-top: 9.063rem;
+    margin-top: 7rem;
     max-width: 19.625rem;
 }
 
+
 /* Gray section - Form  */
-
-
 .form__container {
     grid-column: 4 / span 2;
     margin: auto 0 ;
@@ -476,8 +481,8 @@ form .button {
     align-self: flex-end;
 }
 
-/* Info section  */
 
+/* Info section  */
 .map {
     background-image: url("grupparbete-examination-main/img/map-contact.png");
     background-repeat: no-repeat;
@@ -501,8 +506,6 @@ form .button {
 }
 
 .map__yellow-box p {
-    font-family: 'Fira Sans';
-    font-weight: 500;
     font-size: 0.875rem;
     line-height: 1.5rem;
     color: rgba(255, 255, 255, 0.8);
